@@ -1,3 +1,6 @@
+2002-04-01  Vince Darley <vincentdarley@sourceforge.net>
+        * Makefile.in: compilation fix from jcw.
+	
 2002-03-16  Vince Darley <vincentdarley@sourceforge.net>
 	* generic/vfs.c: updated for latest cvs head of Tcl 8.4a5.
 	* library/vfs.tcl: New version from jcw, with better handling
